cue/testdata/basicrewrite/018_self-reference_cycles.txtar
#name: self-reference cycles
#evalPartial
-- in.cue --
a: b - 100
b: a + 100

c: [c[1], c[0]]
-- out/def --
a: b - 100
b: a + 100
c: [c[1], c[0]]
-- out/legacy-debug --
<0>{a: (<1>.b - 100), b: (<1>.a + 100), c: [<1>.c[1],<1>.c[0]]}
-- out/compile --
--- in.cue
{
  a: (〈0;b〉 - 100)
  b: (〈0;a〉 + 100)
  c: [
    〈1;c〉[1],
    〈1;c〉[0],
  ]
}
-- out/eval/stats --
Leaks:  0
Freed:  6
Reused: 2
Allocs: 4
Retain: 11

Unifications: 6
Conjuncts:    26
Disjuncts:    7
-- out/evalalpha --
(struct){
  a: (_|_){
    // [incomplete] b: non-concrete value _ in operand to +:
    //     ./in.cue:2:4
    //     ./in.cue:1:4
  }
  b: (_|_){
    // [incomplete] b: non-concrete value _ in operand to +:
    //     ./in.cue:2:4
    //     ./in.cue:1:4
  }
  c: (#list){
    0: (_){ _ }
    1: (_){ _ }
  }
}
-- diff/-out/evalalpha<==>+out/eval --
diff old new
--- old
+++ new
@@ -1,10 +1,12 @@
 (struct){
   a: (_|_){
-    // [cycle] cycle error:
+    // [incomplete] b: non-concrete value _ in operand to +:
+    //     ./in.cue:2:4
     //     ./in.cue:1:4
   }
   b: (_|_){
-    // [cycle] cycle error:
+    // [incomplete] b: non-concrete value _ in operand to +:
+    //     ./in.cue:2:4
     //     ./in.cue:1:4
   }
   c: (#list){
-- diff/explanation --
More useful error messages.
-- out/eval --
(struct){
  a: (_|_){
    // [cycle] cycle error:
    //     ./in.cue:1:4
  }
  b: (_|_){
    // [cycle] cycle error:
    //     ./in.cue:1:4
  }
  c: (#list){
    0: (_){ _ }
    1: (_){ _ }
  }
}
